{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 29,
  "lineage": "b8060eb1-5d0b-5944-98f0-e888a5b76a10",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "project2_terraformed_firewall_exception",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-01T13:52:00.581-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/windy-album-339219/global/firewalls/http-8080-ingress-2",
            "log_config": [],
            "name": "http-8080-ingress-2",
            "network": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/global/networks/project2-terraformed-network",
            "priority": 1000,
            "project": "windy-album-339219",
            "self_link": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/global/firewalls/http-8080-ingress-2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "project2-terraformed-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.project2_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "project2_terraformed_firewall_exception_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-01T13:52:00.601-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/windy-album-339219/global/firewalls/http-22-ingress-2",
            "log_config": [],
            "name": "http-22-ingress-2",
            "network": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/global/networks/project2-terraformed-network",
            "priority": 1000,
            "project": "windy-album-339219",
            "self_link": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/global/firewalls/http-22-ingress-2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.project2_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220213",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/zones/us-central1-a/disks/terraform-instance-74ec0bb90e9a986f"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/windy-album-339219/zones/us-central1-a/instances/terraform-instance-74ec0bb90e9a986f",
            "instance_id": "5679152790999608174",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "alsheikhhusam:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDZqhgBOyK12ROkVQxY+nJ2Bm1B/G4CIFutGHAjsN5k/sh8VOtYZ+ilda5EfTpGDfzSh1V16ckCm4I8j5Mwk8t/BvIrpip+LMo6btWQhT/7+blt0VvsrRe7CpiuQPcClP9Far8ymZ8Puru5nE6wn/Bi7AAa/1W/xAEPu3Fp1/rXzlTa3FMxlUt59BsDq+W93v+WUU9PCnitQwI8KW6YAMVFHpY7ff8CuYplHLzjRQEdJX93zE+IgeIeXm4WOmU5h1MFND724MO6V6h/PNTbniawzeaTp+Zld2jr8ydqI9+TQmfmgHAyUO29vDMOfEbI8mA3LNxVuV9JO649UkCIdhsR alsheikhhusam\r\n"
            },
            "metadata_fingerprint": "P0CDK_KbdJI=",
            "metadata_startup_script": "sudo apt-get update\n\nsudo apt-get install -y default-jre docker.io maven\n\ncurl -fsSL https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo tee \\\n    /usr/share/keyrings/jenkins-keyring.asc \u003e /dev/null\n\necho deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] \\\n    https://pkg.jenkins.io/debian-stable binary/ | sudo tee \\\n    /etc/apt/sources.list.d/jenkins.list \u003e /dev/null\n\nsudo apt-get update\nsudo apt-get install jenkins  [...]
            "name": "terraform-instance-74ec0bb90e9a986f",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.110.199",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/global/networks/project2-terraformed-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/regions/us-central1/subnetworks/project2-terraformed-network",
                "subnetwork_project": "windy-album-339219"
              }
            ],
            "project": "windy-album-339219",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/zones/us-central1-a/instances/terraform-instance-74ec0bb90e9a986f",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "project2-terraformed-instance"
            ],
            "tags_fingerprint": "FUqiNC4A8YE=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.project2_vpc_network",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "project2_vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/windy-album-339219/global/networks/project2-terraformed-network",
            "mtu": 0,
            "name": "project2-terraformed-network",
            "project": "windy-album-339219",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/windy-album-339219/global/networks/project2-terraformed-network"
          }
        }
      ]
    }
  ]
}